Runner.py was added to alter main logic of launching translator. Now it runs from runner.py due to hotkey pressing. Threading was removed

--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
     "Phrase": 0,
-    "Highlighting color": "#59e861",
+    "Highlighting color": "#ff427a",
     "Theme current": "Dark",
     "Source language": "eng+rus"
 }
