Menu was relocated, 'hot key' option was added to settings.json so user can change it through apps interface. Settings image was changed

--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,7 @@
 {
     "Phrase": 0,
-    "Highlighting color": "#ff427a",
+    "Highlighting color": "#e455ec",
     "Theme current": "Dark",
-    "Source language": "eng+rus"
+    "Source language": "eng+rus",
+    "Hot key": "ctrl+alt+a"
 }
