Add class Menu to fix menu bar transparency, but menu is not perfect yet

--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
     "Phrase": 0,
-    "Highlighting color": "#e455ec",
+    "Highlighting color": null,
     "Theme current": "Dark",
     "Source language": "eng+rus",
     "Hot key": "ctrl+alt+a"
