Menu fixed almost fully. Topmost attribute was removed from the main window. Bug with no highlighting color fixed.

--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
     "Phrase": 0,
-    "Highlighting color": null,
+    "Highlighting color": "#fe4364",
     "Theme current": "Dark",
     "Source language": "eng+rus",
     "Hot key": "ctrl+alt+a"
