Add possibility to change hot keys by entering them directly on the keyboard

--- a/settings.json
+++ b/settings.json
@@ -3,7 +3,7 @@
     "Theme": "Dark",
     "Source language": "English",
     "Target language": "Russian",
-    "Hot key": "ctrl+alt+a",
+    "Hot key": "ctrl+alt+t",
     "Method": "Multitran scrap",
     "Default source": "English",
     "Default target": "Russian"
