--- a/settings.json
+++ b/settings.json
@@ -1,10 +1,10 @@
 {
-    "Highlighting color": "#d259e8",
+    "Highlighting color": "#df5fe2",
     "Theme": "Dark",
     "Source language": "English",
     "Target language": "Russian",
-    "Hot key": "ctrl+alt+t",
+    "Hot key": "ctrl+alt+a",
     "Method": "Multitran scrap",
     "Default source": "English",
-    "Default target": "Russian"
+    "Default target": "Ukrainian"
 }
