Add file error_handle.py to keep error descriptions and titles there. Add checking for presence of tesseract

--- a/settings.json
+++ b/settings.json
@@ -5,6 +5,6 @@
     "Target language": "Russian",
     "Hot key": "ctrl+alt+a",
     "Method": "Multitran scrap",
-    "Default source": "English",
-    "Default target": "Ukrainian"
+    "Default source": "German",
+    "Default target": "Russian"
 }
