Change setting "Highlighting color" to "Highlight color"

--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-    "Highlighting color": "red",
+    "Highlight color": "red",
     "Theme": "Dark",
     "Source language": "English",
     "Target language": "Russian",
