--- a/settings.json
+++ b/settings.json
@@ -7,5 +7,6 @@
     "Exit hot key": "alt+e",
     "Method": "Multitran scrape",
     "Default source": "English",
-    "Default target": "Russian"
+    "Default target": "Russian",
+    "test": 1,
 }
